<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginBottom="24dp">

        <ImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/add_task"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_task"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/orange1"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <LinearLayout
                android:id="@+id/addNewTaskParentContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:visibility="gone"
                android:layout_marginVertical="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/taskParent"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="4dp">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/system"/>

                    <TextView
                        android:id="@+id/addNewTaskParentLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/taskParent"/>


                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/addNewTaskLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:singleLine="true"
                android:hint="@string/taskLabel"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:weightSum="10"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:layout_marginEnd="16dp">

                    <ImageButton
                        android:id="@+id/addNewTaskDatePicker"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:background="@drawable/schedule"/>

                </LinearLayout>


                <TextView
                    android:id="@+id/addNewTaskDateTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/pick_a_date"
                    android:layout_weight="8"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1">

                    <ImageButton
                        android:id="@+id/addNewTaskReminderEnabled"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/alarm_bell_greyscale"/>

                    <ImageButton
                        android:id="@+id/addNewTaskRepeatEnabled"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:background="@drawable/repeat_greyscale"/>

                </LinearLayout>
            </LinearLayout>

            <!--   Layout reminder     -->
            <LinearLayout
                android:id="@+id/addNewTaskReminderContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                android:layout_marginBottom="16dp"
                android:background="@drawable/rounded_box_orange310">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/alarm_bell"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/orange1"
                        android:text="@string/reminder"/>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:weightSum="10"
                    android:layout_marginBottom="16dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:layout_weight="1"
                        android:layout_marginEnd="16dp">

                        <ImageButton
                            android:id="@+id/addNewTaskReminderDatePicker"
                            android:layout_width="32dp"
                            android:layout_height="32dp"
                            android:background="@drawable/schedule"/>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/addNewTaskReminderDateTv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/pick_a_date"
                        android:layout_weight="9"/>

                </LinearLayout>

                <TextView
                    android:id="@+id/addNewTaskNotificationPermissionTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="italic"
                    android:textColor="@color/red1"
                    android:text="@string/enableNotificationMessage"
                    android:visibility="gone"
                    android:layout_marginVertical="8dp"/>

            </LinearLayout>

            <!--   Layout repeat     -->
            <LinearLayout
                android:id="@+id/addNewTaskRepeatContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp"
                android:visibility="gone"
                android:layout_marginBottom="24dp"
                android:background="@drawable/rounded_box_orange310">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_marginBottom="8dp">

                    <ImageView
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/repeat"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textColor="@color/orange1"
                        android:text="@string/repetition"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/frequency" />

                <Spinner
                    android:id="@+id/addNewTaskRepeatSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <TextView
                android:id="@+id/addNewTaskSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/save"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
                android:textAlignment="center"
                android:background="@drawable/rounded_box_orange"
                android:textColor="@color/white"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>